# rpi-video-recorder

./: CMakeLists.txt  README.md  converter.c  main.c  rawcam.c  utils.c  utils.h
src/: CMakeLists.txt  converter.c  converter.h  rawcam.c  rawcam.h  tc358743_regs.h  utils.c  utils.h
